--- a/view/detail_product.html
+++ b/view/detail_product.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trang chủ</title>
+    <title>Chi tiết sản phẩm</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -58,36 +58,122 @@
           </div>
         </div>
       </div>
+
+
+
+
+
+
     <!--Chi tiết sản phẩm-->
       <div class="wrap__detail">
+
         <div class="detail__first">
-            <div class="detail__first__img">
-                <img src="" alt="">
+            <div class="detail__first-img">
+                <img src="../assets/img/sp1.jpg" alt="">
             </div>
             <div class="detail__first-content">
                 <div class="detail__title">
                     T-Shirt thể thao Team Whales
                 </div>
+                <div class="detail_category">Danh mục : <span>Quần áo Bóng đá</span></div>
                 <div class="detail__price">
-                    999.000 vnđ
+                    Giá: 999.000 vnđ
+                </div>
+                <div class="detail__color">
+                  <div class="detail__color-title">
+                    Color:
+                  </div>
+                  <div class="detail__color_item">
+                  
+                    <span class="blue">Blue</span>
+                    <span class="red">Red</span>
+                    <span class="green">Green</span>
+                    <span class="yellow">Purple</span>
+                  </div>
+
                 </div>
                 <div class="detail__size">
                     <div class="detail__size-title">
-                        Kích thước:
+                        Size:
                     </div>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
-                    <span>XL</span>
+                    <div class="detail__size-item">
+                      <span>S</span>
+                      <span>M</span>
+                      <span>L</span>
+                      <span>XL</span>
+                    </div>
+                   
                 </div>
-
+                <div class="detail__quantity">
+                  <div class="detail__quantity-title">
+                    Số lượng
+                  </div>
+                  <div class="quantity"> <div class="decrease">-</div><div class="number">1</div> <div class="increase">+</div></div>
+                </div>
+                <div class="action">
+                  <button class="buy__now">Mua ngay</button>
+                  <button class="addCart">Thêm vào giỏ hàng</button>
+                </div>
+               
+                <div class="line"></div>
+                <h3>Đặc điểm nổi bật</h3>
+                <p>Chất liệu: Denim <br>
+                  Thành phần: 98% Cotton + 2% Spandex<br>
+                  Công nghệ Laser Marking tạo các vệt hiệu ứng chuẩn xác trên sản phẩm<br>
+                  Vải Denim được wash trước khi may nên không rút và hạn chế ra màu sau khi giặt<br>
+                  Bề mặt quần không thô ráp<br>
+                  Co giãn tốt giúp quần ôm vừa vặn, thoải mái<br>
+                  Dáng Slim Fit ôm tôn dáng, giúp bạn "hack" đôi chân dài và gọn đẹp<br>
+                  Người mẫu: 179 cm - 75 kg, mặc quần size 32<br>
+                  Tự hào sản xuất tại Việt Nam<br>
+                  Lưu ý: Sản phẩm vẫn sẽ bạc màu sau một thời gian dài sử dụng theo tính chất tự nhiên</p>
             </div>
 
+        </div>
+        <div class="line"></div>
+        <div class="comment">
+          <div class="comment__title">Bình luận</div>
+          <div class="comment__add">Thêm bình luận</div>
+          <div class="comment__content">
+            <div class="comment__content-acount">
+              <i class="fa-solid fa-user"></i>
+              Nguyễn Văn A
+            </div>
+            <div class="comment__content-cm">
+              Sản phẩm tốt....
+            </div>
+
+          </div>
+          <div class="comment__content">
+            <div class="comment__content-acount">
+              <i class="fa-solid fa-user"></i>
+              Nguyễn Văn B
+            </div>
+            <div class="comment__content-cm">
+              Sản phẩm rất vừa vặn
+            </div>
+
+          </div>
+
+        </div>
+        <h4>Sản phẩm liên quan</h4>
+        <div class="product__relative">
+            <div class="product__relative-item">sản phẩm 1</div>
+            <div class="product__relative-item">Sản phẩm 2</div>
+            <div class="product__relative-item">Sản phẩm 2</div>
         </div>
       
       </div>
  
      
+
+
+
+
+
+
+
+
       <!-- footer -->
       <div class="footer">
         <div class="main_foot">
