--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -114,3 +114,251 @@ h3 {
 .foot2 ul li a:hover {
   text-decoration: underline;
 }
+/* Css Chi tiết sản phẩm */
+
+.detail__first{
+  display:flex;
+  margin: 0 0 20px 0;
+}
+.detail__first-img{
+  width: 50%;
+  height: 100%;
+  margin: 0 40px 0 20px
+}
+.detail__first .detail__first-img img{ 
+ width: 100%;
+  height: 100%;
+}
+.detail__first-content{
+  flex:1;
+  font-size: 24px;
+}
+.detail__title{
+  font-size: 35px;
+  font-weight: bold;
+  margin: 0 0 10px 0;
+}
+.detail__price{
+  font-weight: bolder;
+}
+.detail__color-title{
+  margin: 10px 0;
+  font-weight: bold;
+}
+
+.blue{
+  background-color: blue;
+ 
+}
+.red{
+background-color: red;
+}
+.green{
+background-color: green;
+}
+.yellow{
+background-color:purple;
+}
+
+.blue,.red,.green,.yellow{
+  text-align: center;
+  display:inline-block;
+  width: 100px;
+  margin: 0 5px 10px;
+  padding: 10px;
+  border-radius:25px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.detail__size-title{
+  margin: 0 0 10px 0;;
+  font-weight: bold;
+
+}
+.detail__size-item span{
+  background-color: aqua ;
+  display: inline-block;
+  padding: 10px 20px;
+  width: 80px;
+  text-align: center;
+  border-radius: 15px;
+  margin: 0 5px 0
+}
+.detail__quantity-title{
+  margin: 0 0  10px 0
+}
+.action{
+  margin: 10px 0 0 0;
+}
+.quantity{
+  display: flex;
+  border: 1px solid rgb(103, 100, 100);
+  width: fit-content;
+  border-radius: 10px;
+}
+.increase,.decrease{
+  font-size: 30px;
+  cursor: pointer;
+  color:#D5D7D8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+}
+.number{
+  font-size: 30px;
+  padding: 0 20px;
+  background-color: #EDEDED;
+
+}
+.detail__first-content button{
+  padding: 10px 25px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 0 10px 20px 0;
+  border:none;
+  color:#fff;
+
+}
+.detail__first-content button:active{
+  transform: scale(1.1,1.1);
+}
+.buy__now{
+  background-color: rgb(67, 226, 67);
+}
+.addCart{
+  background-color: #000;
+}
+.wrap__detail .line{
+  background-color: #000;
+  width: 100%;
+  height: 2px;
+}
+.detail__first-content h3{
+  font-size: 30px;
+  margin: 20px 0 10px 0;;
+}
+.comment{
+  margin-top: 20px;
+  font-size: 24px;
+  position: relative;
+}
+.comment__title{
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.comment__add{
+  position: absolute;
+  top: 7px;
+  right: 20px;
+  background-color: rgb(81, 216, 81);
+  width:fit-content;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  
+}
+.comment__add:active{
+  transform: scale(0.9,0.9);
+}
+.comment__content{
+  background-color: aliceblue;
+  padding: 10px 30px;
+  border-radius: 25px;
+  margin: 10px 0;
+}
+.comment__content .comment__content-acount{
+  font-weight: bold;
+  margin: 0 0 10px 0;
+}
+.comment__content-cm{
+  margin-left: 20px;
+}
+.product__relative{
+  display:flex;
+  justify-content: space-around;
+}
+
+.product__relative-item{
+  height: 400px;
+  width: 30%;
+  background-color: antiquewhite;
+  border-radius: 10px;
+}
+.wrap__detail h4{
+  font-weight: bold;
+  font-size: 40px;
+  margin: 20px 5px;
+}
+
+
+/* Css Cart */
+.wrap__cart{
+  padding: 0 150px;
+  font-size: 24px;
+}
+.cart__item{
+  height: 200px;
+  box-shadow:0px 0px 2px rgba(0,0,0,0.9  );
+  font-size: 20px;
+  margin: 10px 0;
+}
+.cart__img{
+  width: 35%;
+  height: 100%;
+}
+.cart__item-product{
+  display:flex;
+  margin: 20px 0 0 0
+  
+}
+.cart__name{
+  font-weight: bold;
+  font-size: 20px;
+
+}
+.cart__img img{
+  width: 90%;
+  height: 80%;
+}
+.align__item{
+  display:flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.cart__item .col-2{
+  height: 200px;
+}
+.choice__delete{
+  display:flex;
+}
+.choice,.delete,.thanhtoan,.tongtien{
+  margin: 10px 20px;
+  padding: 5px 15px;
+  border-radius: 10px;
+  cursor:pointer;
+  
+}
+.choice{
+  background-color: aquamarine;
+}
+.delete{
+  background-color: rgb(239 95 95);
+}
+.thanhtoan{
+  background-color: rgb(45, 241, 45);
+}
+.choice:active{
+  transform: scale(0.9,0.9);
+
+}
+.delete:active{
+  transform: scale(0.9,0.9);
+
+}
+.thanhtoan:active{
+  transform: scale(0.9,0.9);
+}
+  
