--- a/view/document/demo.html
+++ b/view/document/demo.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../../assets/css/demo.css">
 </head>
 <body>
     <!-- Form hoặc giao diện sản phẩm -->
-<form action="add_to_cart.php" method="post">
-    <input type="hidden" name="product_id" value="123"> <!-- Thay bằng ID sản phẩm thực tế -->
+<!-- <form action="add_to_cart.php" method="post">
+    <input type="hidden" name="product_id" value="123"> Thay bằng ID sản phẩm thực tế -->
     <!-- Các trường thông tin sản phẩm khác -->
-    <label for="quantity">Số lượng:</label>
+    <!-- <label for="quantity">Số lượng:</label>
     <input type="number" id="quantity" name="quantity" value="1" min="1">
     <button type="submit">Thêm vào giỏ hàng</button>
-</form>
+</form> -->
+<!-- Tạo điều hướng cho trang giỏ hàng -->
+<div class="container">
+    <div class="donhang_nav">
+        <div class="donhang_all  duongkeduoi"><a href="#">Tất cả</a></div>
+        <div class="donhang_all"><a href="#">Chờ xác nhận</a></div>
+        <div class="donhang_all"><a href="#">Đang giao</a></div>
+        <div class="donhang_all"><a href="#">Đã mua</a></div>
+        <div class="donhang_all"><a href="#">Đã hủy</a></div>
+    </div>
+
+</div>
 
 </body>
 </html>
