--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -33,18 +33,27 @@
     display:flex;
     flex-direction: column;
     margin:10px 0;
+    padding-left:0;
 }
 .admin__aside-nav ul li{
     list-style-type: none;
     cursor: pointer;
-    margin:5px 0;
     width:100%;
+    padding: 5px 0 5px 15px;
 
 }
+
+.active_color{
+    background-color: #c3c4c6;
+
+}
+
 .admin__aside-nav ul li a{
     text-transform: none;
     text-decoration: none;
     color: #000;
+    display:inline-block;
+    width:100%;
 }
 .admin__article{    
     flex:1;
